--- a/cardio-records/cardio-records.page.html
+++ b/cardio-records/cardio-records.page.html
@@ -10,7 +10,7 @@
   
 <ion-content>
 
-    <ion-button (click)="newRecord()">
+    <ion-button (click)="createRecord()">
       <ion-icon name ="add-circle" ></ion-icon>
       New Record
     </ion-button>
